# solovay-kitaev-py

./: README.md  demo-ht.ipynb  demo.ipynb  requirements.txt  setup.cfg
solovay_kitaev/: __init__.py  algorithm.py  clifford.py  ht.py  solovay_kitaev.py
test/: test_sk.py
