[metadata]
name = solovay-kitaev-py
version = attr: solovay_kitaev.VERSION
description = pure python implementation of solovay kitaev algorithm
long_description = file: README.md
long_description_content_type='text/markdown'
keywords = Math Physics
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6


[options]
packages = find:
tests_requires = pytest
setup_requires = pytest-runner

[aliases]
test = pytest